[closes #614] Distinguish between application and system properties